# simple-http-server

./: .gitignore  ChangeLog  README.rst  package.py  setup.cfg  setup.py
sftp/: __init__.py  ftp.py
shttp/: __init__.py  handler.py
