[metadata]
name = shttp
author = singein
author-email = singein@outlook.com
summary = python http.server based http server, support file uploading
license = MIT
description-file = 
    README.rst
home-page = http://https://pypi.org/project/simple-ftp/
requires-python = >= 3.4

[files]
packages = 
    shttp
